welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:17: error: type mismatch;
 found   : Unit
 required: Int
  if(num == 12 || num == 13){
  ^